src/wizard/antlr4/wizardParser.py
# Generated from ./vendor/wizparse/wizards/wizard.g4 by ANTLR 4.13.1
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class wizardParser(Parser):
    grammarFileName = "wizard.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'Cancel'",
        "'Case'",
        "'Default'",
        "'For'",
        "'from'",
        "'to'",
        "'by'",
        "'If'",
        "'SelectOne'",
        "'SelectMany'",
        "'While'",
        "'!'",
        "'not'",
        "'|'",
        "'or'",
        "'&'",
        "'and'",
        "'False'",
        "'True'",
        "'SubPackages'",
        "<INVALID>",
        "<INVALID>",
        "','",
        "'.'",
        "'('",
        "')'",
        "'['",
        "']'",
        "':'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'Break'",
        "'Continue'",
        "'Elif'",
        "'Else'",
        "'EndFor'",
        "'EndIf'",
        "'EndSelect'",
        "'EndWhile'",
        "'Return'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'/'",
        "'-'",
        "'+'",
        "'^'",
        "'*'",
        "'%'",
        "<INVALID>",
        "'in'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "COMMENT",
        "CONTINUATION",
        "Comma",
        "Dot",
        "LeftParenthesis",
        "RightParenthesis",
        "LeftBracket",
        "RightBracket",
        "Colon",
        "CompoundAdd",
        "CompoundSub",
        "CompoundMul",
        "CompoundDiv",
        "CompoundExp",
        "CompoundMod",
        "Equal",
        "GreaterOrEqual",
        "Greater",
        "LesserOrEqual",
        "Lesser",
        "NotEqual",
        "Assign",
        "Break",
        "Continue",
        "Elif",
        "Else",
        "EndFor",
        "EndIf",
        "EndSelect",
        "EndWhile",
        "Return",
        "Keyword",
        "Number",
        "DoubleQuotedString",
        "SingleQuotedString",
        "Divide",
        "Minus",
        "Plus",
        "Raise",
        "Times",
        "Modulo",
        "Decrement",
        "In",
        "Increment",
        "Identifier",
        "WHITESPACE",
    ]

    RULE_parseWizard = 0
    RULE_body = 1
    RULE_stmt = 2
    RULE_assignment = 3
    RULE_compoundAssignment = 4
    RULE_controlFlowStmt = 5
    RULE_cancelStmt = 6
    RULE_caseStmt = 7
    RULE_defaultStmt = 8
    RULE_elifStmt = 9
    RULE_elseStmt = 10
    RULE_forStmt = 11
    RULE_forRangeHeader = 12
    RULE_forInHeader = 13
    RULE_ifStmt = 14
    RULE_selectStmt = 15
    RULE_selectCaseList = 16
    RULE_optionTuple = 17
    RULE_selectOne = 18
    RULE_selectMany = 19
    RULE_whileStmt = 20
    RULE_argList = 21
    RULE_keywordStmt = 22
    RULE_expr = 23
    RULE_constant = 24
    RULE_integer = 25
    RULE_decimal = 26
    RULE_string = 27

    ruleNames = [
        "parseWizard",
        "body",
        "stmt",
        "assignment",
        "compoundAssignment",
        "controlFlowStmt",
        "cancelStmt",
        "caseStmt",
        "defaultStmt",
        "elifStmt",
        "elseStmt",
        "forStmt",
        "forRangeHeader",
        "forInHeader",
        "ifStmt",
        "selectStmt",
        "selectCaseList",
        "optionTuple",
        "selectOne",
        "selectMany",
        "whileStmt",
        "argList",
        "keywordStmt",
        "expr",
        "constant",
        "integer",
        "decimal",
        "string",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    COMMENT = 21
    CONTINUATION = 22
    Comma = 23
    Dot = 24
    LeftParenthesis = 25
    RightParenthesis = 26
    LeftBracket = 27
    RightBracket = 28
    Colon = 29
    CompoundAdd = 30
    CompoundSub = 31
    CompoundMul = 32
    CompoundDiv = 33
    CompoundExp = 34
    CompoundMod = 35
    Equal = 36
    GreaterOrEqual = 37
    Greater = 38
    LesserOrEqual = 39
    Lesser = 40
    NotEqual = 41
    Assign = 42
    Break = 43
    Continue = 44
    Elif = 45
    Else = 46
    EndFor = 47
    EndIf = 48
    EndSelect = 49
    EndWhile = 50
    Return = 51
    Keyword = 52
    Number = 53
    DoubleQuotedString = 54
    SingleQuotedString = 55
    Divide = 56
    Minus = 57
    Plus = 58
    Raise = 59
    Times = 60
    Modulo = 61
    Decrement = 62
    In = 63
    Increment = 64
    Identifier = 65
    WHITESPACE = 66

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ParseWizardContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(wizardParser.BodyContext, 0)

        def EOF(self):
            return self.getToken(wizardParser.EOF, 0)

        def getRuleIndex(self):
            return wizardParser.RULE_parseWizard

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParseWizard"):
                listener.enterParseWizard(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParseWizard"):
                listener.exitParseWizard(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParseWizard"):
                return visitor.visitParseWizard(self)
            else:
                return visitor.visitChildren(self)

    def parseWizard(self):
        localctx = wizardParser.ParseWizardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parseWizard)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.body()
            self.state = 57
            self.match(wizardParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(wizardParser.StmtContext)
            else:
                return self.getTypedRuleContext(wizardParser.StmtContext, i)

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(wizardParser.ExprContext)
            else:
                return self.getTypedRuleContext(wizardParser.ExprContext, i)

        def getRuleIndex(self):
            return wizardParser.RULE_body

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBody"):
                listener.enterBody(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBody"):
                listener.exitBody(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBody"):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)

    def body(self):
        localctx = wizardParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_body)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (
                (((_la) & ~0x3F) == 0 and ((1 << _la) & 4825633389041958674) != 0)
                or _la == 64
                or _la == 65
            ):
                self.state = 61
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
                if la_ == 1:
                    self.state = 59
                    self.stmt()
                    pass

                elif la_ == 2:
                    self.state = 60
                    self.expr(0)
                    pass

                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(wizardParser.AssignmentContext, 0)

        def compoundAssignment(self):
            return self.getTypedRuleContext(wizardParser.CompoundAssignmentContext, 0)

        def controlFlowStmt(self):
            return self.getTypedRuleContext(wizardParser.ControlFlowStmtContext, 0)

        def keywordStmt(self):
            return self.getTypedRuleContext(wizardParser.KeywordStmtContext, 0)

        def getRuleIndex(self):
            return wizardParser.RULE_stmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStmt"):
                listener.enterStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStmt"):
                listener.exitStmt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStmt"):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)

    def stmt(self):
        localctx = wizardParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.compoundAssignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.controlFlowStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 69
                self.keywordStmt()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(wizardParser.Identifier, 0)

        def Assign(self):
            return self.getToken(wizardParser.Assign, 0)

        def expr(self):
            return self.getTypedRuleContext(wizardParser.ExprContext, 0)

        def getRuleIndex(self):
            return wizardParser.RULE_assignment

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAssignment"):
                listener.enterAssignment(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAssignment"):
                listener.exitAssignment(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAssignment"):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)

    def assignment(self):
        localctx = wizardParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(wizardParser.Identifier)
            self.state = 73
            self.match(wizardParser.Assign)
            self.state = 74
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompoundAssignmentContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(wizardParser.Identifier, 0)

        def expr(self):
            return self.getTypedRuleContext(wizardParser.ExprContext, 0)

        def CompoundExp(self):
            return self.getToken(wizardParser.CompoundExp, 0)

        def CompoundMul(self):
            return self.getToken(wizardParser.CompoundMul, 0)

        def CompoundDiv(self):
            return self.getToken(wizardParser.CompoundDiv, 0)

        def CompoundMod(self):
            return self.getToken(wizardParser.CompoundMod, 0)

        def CompoundAdd(self):
            return self.getToken(wizardParser.CompoundAdd, 0)

        def CompoundSub(self):
            return self.getToken(wizardParser.CompoundSub, 0)

        def getRuleIndex(self):
            return wizardParser.RULE_compoundAssignment

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCompoundAssignment"):
                listener.enterCompoundAssignment(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCompoundAssignment"):
                listener.exitCompoundAssignment(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCompoundAssignment"):
                return visitor.visitCompoundAssignment(self)
            else:
                return visitor.visitChildren(self)

    def compoundAssignment(self):
        localctx = wizardParser.CompoundAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compoundAssignment)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(wizardParser.Identifier)
            self.state = 77
            _la = self._input.LA(1)
            if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 67645734912) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 78
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ControlFlowStmtContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return wizardParser.RULE_controlFlowStmt

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class ReturnContext(ControlFlowStmtContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a wizardParser.ControlFlowStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Return(self):
            return self.getToken(wizardParser.Return, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterReturn"):
                listener.enterReturn(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitReturn"):
                listener.exitReturn(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitReturn"):
                return visitor.visitReturn(self)
            else:
                return visitor.visitChildren(self)

    class CancelContext(ControlFlowStmtContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a wizardParser.ControlFlowStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def cancelStmt(self):
            return self.getTypedRuleContext(wizardParser.CancelStmtContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCancel"):
                listener.enterCancel(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCancel"):
                listener.exitCancel(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCancel"):
                return visitor.visitCancel(self)
            else:
                return visitor.visitChildren(self)

    class BreakContext(ControlFlowStmtContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a wizardParser.ControlFlowStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Break(self):
            return self.getToken(wizardParser.Break, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBreak"):
                listener.enterBreak(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBreak"):
                listener.exitBreak(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBreak"):
                return visitor.visitBreak(self)
            else:
                return visitor.visitChildren(self)

    class ForContext(ControlFlowStmtContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a wizardParser.ControlFlowStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def forStmt(self):
            return self.getTypedRuleContext(wizardParser.ForStmtContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFor"):
                listener.enterFor(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFor"):
                listener.exitFor(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFor"):
                return visitor.visitFor(self)
            else:
                return visitor.visitChildren(self)

    class SelectContext(ControlFlowStmtContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a wizardParser.ControlFlowStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def selectStmt(self):
            return self.getTypedRuleContext(wizardParser.SelectStmtContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelect"):
                listener.enterSelect(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelect"):
                listener.exitSelect(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSelect"):
                return visitor.visitSelect(self)
            else:
                return visitor.visitChildren(self)

    class WhileContext(ControlFlowStmtContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a wizardParser.ControlFlowStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def whileStmt(self):
            return self.getTypedRuleContext(wizardParser.WhileStmtContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterWhile"):
                listener.enterWhile(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitWhile"):
                listener.exitWhile(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitWhile"):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)

    class ContinueContext(ControlFlowStmtContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a wizardParser.ControlFlowStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Continue(self):
            return self.getToken(wizardParser.Continue, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterContinue"):
                listener.enterContinue(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitContinue"):
                listener.exitContinue(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitContinue"):
                return visitor.visitContinue(self)
            else:
                return visitor.visitChildren(self)

    class IfContext(ControlFlowStmtContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a wizardParser.ControlFlowStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifStmt(self):
            return self.getTypedRuleContext(wizardParser.IfStmtContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIf"):
                listener.enterIf(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIf"):
                listener.exitIf(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitIf"):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)

    def controlFlowStmt(self):
        localctx = wizardParser.ControlFlowStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_controlFlowStmt)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [43]:
                localctx = wizardParser.BreakContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(wizardParser.Break)
                pass
            elif token in [1]:
                localctx = wizardParser.CancelContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.cancelStmt()
                pass
            elif token in [44]:
                localctx = wizardParser.ContinueContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.match(wizardParser.Continue)
                pass
            elif token in [4]:
                localctx = wizardParser.ForContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.forStmt()
                pass
            elif token in [8]:
                localctx = wizardParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.ifStmt()
                pass
            elif token in [51]:
                localctx = wizardParser.ReturnContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 85
                self.match(wizardParser.Return)
                pass
            elif token in [9, 10]:
                localctx = wizardParser.SelectContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 86
                self.selectStmt()
                pass
            elif token in [11]:
                localctx = wizardParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 87
                self.whileStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CancelStmtContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(wizardParser.ExprContext, 0)

        def getRuleIndex(self):
            return wizardParser.RULE_cancelStmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCancelStmt"):
                listener.enterCancelStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCancelStmt"):
                listener.exitCancelStmt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCancelStmt"):
                return visitor.visitCancelStmt(self)
            else:
                return visitor.visitChildren(self)
